# nanoDiffusionChat

./: .gitignore  .marimo.toml  AGENTS.md  README.md  pyproject.toml  report.md
configs/: small.yaml  tiny.yaml
docs/: architecture.md  artifact_store.md  quick_reference.md  roadmap.md  technology_choices.md
notebooks/: 00_home.py  00_setup.py  01_data.py  01_data_lab.py  02_model.py  02_model_lab.py  03_train.py  03_train_lab.py  04_sample.py  04_sample_lab.py  05_eval.py  05_eval_lab.py  05_manual_eval_lab.py  06_runs_dashboard.py  07_chat_lab.py
notebooks/research/: corruption_playground.py  sampler_playground.py  schedule_playground.py
scripts/: run_eval.py  run_prepare_data.py  run_sample.py  run_train.py
src/: __init__.py
src/config/: __init__.py  base.py  io.py  presets.py  schema.py
src/data/: __init__.py  batching.py  dataset.py  instruction.py  prepare.py
src/diffusion/: __init__.py  corrupt.py  objectives.py  protocols.py  sample.py  samplers.py  schedule.py
src/eval/: __init__.py  compare.py  generation.py  manual.py  metrics.py  perplexity.py  qualitative.py
src/models/: __init__.py  denoiser.py  embeddings.py  factory.py  transformer.py
src/sampling/: __init__.py  sampler.py
src/store/: __init__.py  dataset_store.py  manifests.py  paths.py  run_store.py
src/tokenization/: __init__.py  tokenizer.py
src/training/: __init__.py  checkpoint.py  loop.py  loss.py  metrics.py  trainer.py
src/utils/: __init__.py  helpers.py  serialization.py
tests/: conftest.py
tests/test_config/: test_schema.py
tests/test_data/: test_instruction.py
(+32 files in other folders)
