[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoDiffusionChat"
version = "0.1.0"
description = "A small diffusion language model with masked discrete diffusion"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Francesco Brassesco" }
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tokenizers>=0.15",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "requests>=2.31",
    "altair>=6.0.0",
    "polars>=1.39.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "marimo>=0.1",
    "types-requests>=2.31",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src"]
